Details
-
Bug
-
Resolution: Fixed
-
Major
-
r70107 gcc dbg
Description
I managed to start MS Word2000 - see react-r70100-Office2000_WinWord_runs_after_hacking_around_SetupFailures.png![]()
Reproducable issue: When you hit the about tab in WinWord you get a BSOD in Win32K.
react-r70107-BSOD-Win32K-On-WinWordOffice2000-AboutTab.png![]()
Something Palette/DIBitmap related.
see react-r70107-BSOD-Win32K-On-WinWordOffice2000-AboutTab.log![]()
I don't care much about Office, but Win32K shall not crash from any User Mode Process...